--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vue": "^3.2.37",
     "vue-cal": "^4.8.0",
     "vue-cleave-component": "^3.0.2",
+    "vue-sweetalert2": "^5.0.5",
     "vue-cli-plugin-i18n": "^2.3.1",
     "vue-color-kit": "^1.0.5",
     "vue-draggable-next": "^2.1.1",
@@ -98,6 +99,7 @@
     "happy-dom": "^10.9.0",
     "postcss": "^8.4.23",
     "sass": "^1.32.0",
+    "leaflet": "1.7.1",
     "sass-loader": "^10.0.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.1.3",
