--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "vue": "^3.2.37",
     "vue-cal": "^4.8.0",
     "vue-cleave-component": "^3.0.2",
-    "vue-sweetalert2": "^5.0.5",
     "vue-cli-plugin-i18n": "^2.3.1",
     "vue-color-kit": "^1.0.5",
     "vue-draggable-next": "^2.1.1",
@@ -62,6 +61,7 @@
     "vue-responsive-video-background-player": "^2.3.1",
     "vue-router": "^4.1.5",
     "vue-select": "^4.0.0-beta.3",
+    "vue-sweetalert2": "^5.0.5",
     "vue-timeago3": "^2.3.0",
     "vue-timer-hook": "^1.0.11",
     "vue3-apexcharts": "^1.4.1",
@@ -97,9 +97,9 @@
     "eslint-plugin-unicorn": "^45.0.0",
     "eslint-plugin-vue": "^9.5.1",
     "happy-dom": "^10.9.0",
+    "leaflet": "^1.9.4",
     "postcss": "^8.4.23",
     "sass": "^1.32.0",
-    "leaflet": "1.7.1",
     "sass-loader": "^10.0.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.1.3",
