--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@
 VITE_BACKEND=http://192.168.31.111:8005/api/v1
 # VITE_BACKEND=https://ikhasanmusaev.jprq.live/api/v1
 # VITE_SYSTEM_INFO_WEBSOCKET=ws://192.168.31.111:4005/
-VITE_SYSTEM_INFO_WEBSOCKET=wss://192.168.31.111:8005/ws
+VITE_SYSTEM_INFO_WEBSOCKET=ws://192.168.31.111:4005/
 # VITE_SYSTEM_INFO_WEBSOCKET=wss://ikhasanmusaev.jprq.live/api/v1/
 # baseURL: 'http://192.168.31.111:8001/api/v1',
 #   webSocket: 'ws://192.168.31.111:8000/chat',
