--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@casl/ability": "^6.1.1",
     "@casl/vue": "^2.2.0",
+    "@editorjs/editorjs": "^2.29.0",
     "@fullcalendar/core": "^6.1.7",
     "@fullcalendar/daygrid": "^6.1.7",
     "@fullcalendar/interaction": "^6.1.7",
@@ -39,6 +40,7 @@
     "maska": "^2.1.9",
     "pinia": "^2.0.22",
     "pnpm": "^8.5.0",
+    "primevue": "^3.48.0",
     "qalendar": "^1.6.1",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
