--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "vue-i18n": "^9.2.2",
     "vue-multiselect": "^3.0.0-beta.1",
     "vue-native-websocket-vue3": "^3.1.7",
+    "vue-quill": "^1.5.1",
     "vue-responsive-video-background-player": "^2.3.1",
     "vue-router": "^4.1.5",
     "vue-select": "^4.0.0-beta.3",
