--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 
 # VITE_BACKEND=http://192.168.31.111:8004/api/v1
-VITE_BACKEND=http://192.168.31.111:8005/api/v1
+# VITE_BACKEND=http://192.168.31.111:8005/api/v1
+VITE_BACKEND=http://192.168.31.27:8005/api/v1
 # VITE_BACKEND=https://ikhasanmusaev.jprq.live/api/v1
 # VITE_SYSTEM_INFO_WEBSOCKET=ws://192.168.31.111:4005/
 VITE_SYSTEM_INFO_WEBSOCKET=ws://192.168.31.111:4005/
