--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,1 @@
-
-VITE_BACKEND=http://192.168.31.111:8005/api/v1
-VITE_ERROR_LOG_URL=http://zk.leocrm.uz:82/api/v2
-VUE_APP_TOKEN_PREFIX=AVTO_JOY
-VITE_SYSTEM_INFO_WEBSOCKET=wss://avtojoy.uz/ws
+VITE_BACKEND=http://dicore.uz:9521/api/v1
