--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@casl/ability": "^6.1.1",
     "@casl/vue": "^2.2.0",
     "@editorjs/editorjs": "^2.29.0",
-    "@fullcalendar/core": "^6.1.7",
+    "@fullcalendar/core": "^6.1.14",
     "@fullcalendar/daygrid": "^6.1.7",
     "@fullcalendar/interaction": "^6.1.7",
     "@fullcalendar/list": "^6.1.7",
@@ -47,8 +47,9 @@
     "splitpanes": "^3.1.1",
     "uikit": "^3.16.17",
     "v-viewer": "^3.0.10",
-    "vue": "^3.2.37",
+    "vue": "^3.4.27",
     "vue-cal": "^4.8.0",
+    "vue-carousel": "^0.18.0",
     "vue-cleave-component": "^3.0.2",
     "vue-cli-plugin-i18n": "^2.3.1",
     "vue-color-kit": "^1.0.5",
