--- a/package.json
+++ b/package.json
@@ -109,7 +109,6 @@
     "typescript": "^5.1.3",
     "vite": "^3.1.0",
     "vitest": "^0.34.1",
-    "vue-cli-plugin-pinia": "~0.1.5",
-    "vue-prism": "^1.0.5"
+    "vue-cli-plugin-pinia": "~0.1.5"
   }
 }
