making carousel to story module

--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "maska": "^2.1.9",
     "pinia": "^2.0.22",
     "pnpm": "^8.5.0",
-    "primevue": "^3.48.1",
+    "primevue": "^3.52.0",
     "qalendar": "^1.6.1",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
     "splitpanes": "^3.1.1",
+    "swiper": "^11.1.4",
     "uikit": "^3.16.17",
     "v-viewer": "^3.0.10",
     "vue": "^3.4.27",
@@ -64,22 +65,25 @@
     "vue-responsive-video-background-player": "^2.3.1",
     "vue-router": "^4.1.5",
     "vue-select": "^4.0.0-beta.3",
+    "vue-simple-progress": "^1.1.1",
     "vue-sweetalert2": "^5.0.5",
     "vue-timeago3": "^2.3.0",
     "vue-timer-hook": "^1.0.11",
     "vue3-apexcharts": "^1.4.1",
     "vue3-blocks-tree": "^0.6.1",
-    "vue3-carousel": "^0.1.46",
+    "vue3-carousel": "^0.1.48",
     "vue3-datepicker": "^0.3.4",
     "vue3-easy-data-table": "^1.5.42",
     "vue3-openlayers": "^0.1.70",
     "vue3-particles": "^2.3.1",
+    "vue3-progress": "^0.0.1-beta4",
     "vue3-qr-reader": "^1.0.0",
     "vue3-rich-accordion": "^0.0.7",
     "vue3-scroll-picker": "^0.1.15",
     "vue3-tabs": "^0.1.13-beta.3",
     "vue3-toastify": "^0.1.10",
     "vuejs-paginate-next": "^1.0.2",
+    "vuejs-progress-bar": "^1.2.8",
     "vueperslides": "^3.4.2"
   },
   "devDependencies": {
