--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-#VITE_BACKEND=http://192.168.31.27:8005/api/v1
- VITE_BACKEND=http://dicore.uz:9521/api/v1
+VITE_BACKEND=http://192.168.31.27:8005/api/v1
+#VITE_BACKEND=http://dicore.uz:9521/api/v1
 # VITE_BACKEND=http://192.168.31.75:8011/api/v1
 
