--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-VITE_BACKEND=http://dicore.uz:9521/api/v1
+#VITE_BACKEND=http://dicore.uz:9521/api/v1
+VITE_BACKEND=http://appsite.havasfood.uz:9521/
